src/test/ui/mismatched_types/closure-mismatch.stderr
error[E0495]: cannot infer an appropriate lifetime due to conflicting requirements
  --> $DIR/closure-mismatch.rs:8:5
   |
LL |     baz(|_| ());
   |     ^^^
   |
   = note: first, the lifetime cannot outlive any other region...
   = note: ...but the lifetime must also be valid for any other region...
note: ...so that the types are compatible
  --> $DIR/closure-mismatch.rs:8:5
   |
LL |     baz(|_| ());
   |     ^^^
   = note: expected `for<'r> std::ops::Fn<(&'r (),)>`
              found `std::ops::Fn<(&(),)>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0495`.
